istio-teaching/envoyfilters/applyto/thrift/dr-thrift.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: thrift-sample-server
spec:
  host: thrift-sample-server
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
